tests/NormalTests/paczka1/small_fuzzy/90007240.err
Error in line 3: 8GUus S131 179,4
Error in line 5: 8GUus S951 71,7
Error in line 10: 8GUus A887 65,6
Error in line 14: YO2UxG2yC S951 73,48
